--- a/notebooks/SuStaInWorkshop.ipynb
+++ b/notebooks/SuStaInWorkshop.ipynb
@@ -10,10 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "1f4fd780-36a5-4148-8f8c-a832a73ad641",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "# Load libraries\n",
     "\n",
@@ -33,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "43b99793-ef1a-4deb-854d-31d3bb774cfd",
    "metadata": {},
    "outputs": [
@@ -446,7 +455,7 @@
        "[650 rows x 21 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +464,7 @@
     "# Load and view simulated tutorial data\n",
     "# The data needs to be in the same directory as your notebook\n",
     "\n",
-    "data = pandas.read_csv('finalEBM_input_no_ageregression.csv')\n",
+    "data = pandas.read_csv('finalEBM_input.csv')\n",
     "data"
    ]
   },
@@ -1527,7 +1536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.3"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
