Update Processing model output.ipynb

--- a/notebooks/Processing model output.ipynb
+++ b/notebooks/Processing model output.ipynb
@@ -27,6 +27,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "6b35ad97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TEST = 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "id": "d837f31c",
    "metadata": {},
